tests/neg/3559b.scala
class A(a: Any) {
  def this() = {
    this(b)           // error
  }

  def b = new {}
}
